# ternary-spreadsheet

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: autofill.rs  cell.rs  format.rs  formula.rs  grid.rs  heatmap.rs  lib.rs  sort.rs  tests.rs
